--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,10 @@ server:
       max: 50
       min-spare: 5
 
+logging:
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
+
 spring:
   application:
     name: config-service
@@ -27,10 +31,13 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh,health
+        include: health, metrics, prometheus
   endpoint:
     health:
       show-details: always
       show-components: always
       probes:
         enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
